syntax = "proto3";

package rivet.backend.pkg.module.get;

import "proto/common.proto";
import "proto/backend/module.proto";

message Request {
	repeated rivet.common.Uuid module_ids = 1;
}

message Response {
	repeated rivet.backend.module.Module modules = 1;
}
